完善应用市场复刻功能与安装流程