@@ -8,10 +8,7 @@ import android.net.Uri;
 
 import androidx.core.content.FileProvider;
 
-import com.hyper.market.UpdateStore;
-import com.hyper.market.SavedPackageArtifact;
 import com.hyper.market.model.ApkArtifact;
-import com.hyper.market.model.MarketAppInfo;
 
 import java.io.File;
 import java.io.IOException;
@@ -25,12 +22,11 @@ public final class ExternalApkInstaller {
     public void install(Context context, List<File> files, List<ApkArtifact> artifacts,
                         InstallOptions options) throws IOException {
         validate(files, artifacts, options);
-        MarketAppInfo app = appFrom(options);
-        List<Uri> uris = saveAndResolveUris(context, app, files, artifacts);
+        List<Uri> uris = resolveUris(context, files);
         List<Intent> intents = createIntents(context, uris, options.getCustomInstallerPackage());
         grantUris(context, options.getCustomInstallerPackage(), uris);
         ensureHandler(context, intents);
-        ExternalInstallActivity.launch(context, intents, options);
+        ExternalInstallActivity.launch(context, intents, options, files, artifacts);
     }
 
     private void validate(List<File> files, List<ApkArtifact> artifacts,
@@ -38,56 +34,33 @@ public final class ExternalApkInstaller {
         if (files.isEmpty() || files.size() != artifacts.size()) {
             throw new IOException("第三方安装器的安装包与元数据不匹配");
         }
-        if (options.getPackageName().isBlank()) {
+        if (isBlank(options.getPackageName())) {
             throw new IOException("第三方安装器缺少应用包名");
         }
-        if (options.getCustomInstallerPackage().isBlank()) {
+        if (isBlank(options.getCustomInstallerPackage())) {
             throw new IOException("请先选择第三方包安装器");
         }
     }
 
-    private MarketAppInfo appFrom(InstallOptions options) {
-        return new MarketAppInfo.Builder()
-                .packageName(options.getPackageName())
-                .displayName(options.getDisplayName())
-                .versionName(options.getVersionName())
-                .versionCode(options.getVersionCode())
-                .iconUrl(options.getIconUrl())
-                .build();
-    }
-
-    private List<Uri> saveAndResolveUris(Context context, MarketAppInfo app, List<File> files,
-                                         List<ApkArtifact> artifacts) throws IOException {
-        UpdateStore store = new UpdateStore(context);
+    private List<Uri> resolveUris(Context context, List<File> files) throws IOException {
         List<Uri> uris = new ArrayList<>(files.size());
-        List<SavedPackageArtifact> savedArtifacts = new ArrayList<>(files.size());
-        for (int index = 0; index < files.size(); index++) {
-            DownloadArchive.SavedLocation saved = DownloadArchive.save(
-                    context, app, artifacts.get(index).getName(), files.get(index), files.size() > 1);
-            savedArtifacts.add(new SavedPackageArtifact(
-                    saved.getLocation(), artifacts.get(index).getName(), saved.getSize()));
-            uris.add(toUri(context, saved.getLocation()));
+        for (File file : files) {
+            if (!file.isFile()) {
+                throw new IOException("第三方安装器找不到安装包：" + file);
+            }
+            uris.add(toUri(context, file));
         }
-        store.recordSavedPackageGroup(app, savedArtifacts);
         return uris;
     }
 
-    private Uri toUri(Context context, String location) throws IOException {
-        Uri parsed = Uri.parse(location);
-        if ("content".equals(parsed.getScheme())) {
-            return parsed;
-        }
-        File file = new File(location);
-        if (!file.isFile()) {
-            throw new IOException("第三方安装器找不到安装包：" + location);
-        }
+    private Uri toUri(Context context, File file) throws IOException {
         return FileProvider.getUriForFile(
                 context, context.getPackageName() + FILE_PROVIDER_SUFFIX, file);
     }
 
     private List<Intent> createIntents(Context context, List<Uri> uris, String installerPackage) {
         if (uris.size() == 1) {
-            return List.of(
+            return java.util.Arrays.asList(
                     createSingleIntent(context, uris.get(0), Intent.ACTION_VIEW, installerPackage),
                     createSingleIntent(context, uris.get(0), Intent.ACTION_INSTALL_PACKAGE,
                             installerPackage));
@@ -97,13 +70,13 @@ public final class ExternalApkInstaller {
                 .putParcelableArrayListExtra(Intent.EXTRA_STREAM, new ArrayList<>(uris))
                 .putExtra(Intent.EXTRA_MIME_TYPES, new String[]{APK_MIME});
         configureIntent(context, intent, uris, installerPackage);
-        return List.of(intent);
+        return java.util.Collections.singletonList(intent);
     }
 
     private Intent createSingleIntent(Context context, Uri uri, String action,
                                       String installerPackage) {
         Intent intent = new Intent(action).setDataAndType(uri, APK_MIME);
-        configureIntent(context, intent, List.of(uri), installerPackage);
+        configureIntent(context, intent, java.util.Collections.singletonList(uri), installerPackage);
         return intent;
     }
 
@@ -111,7 +84,7 @@ public final class ExternalApkInstaller {
                                  String installerPackage) {
         intent.addFlags(Intent.FLAG_GRANT_READ_URI_PERMISSION | Intent.FLAG_ACTIVITY_NEW_TASK);
         intent.setClipData(clipData(context, uris));
-        if (!installerPackage.isBlank()) {
+        if (!isBlank(installerPackage)) {
             intent.setPackage(installerPackage);
         }
     }
@@ -125,7 +98,7 @@ public final class ExternalApkInstaller {
     }
 
     private void grantUris(Context context, String installerPackage, List<Uri> uris) {
-        if (installerPackage.isBlank()) {
+        if (isBlank(installerPackage)) {
             return;
         }
         for (Uri uri : uris) {
@@ -141,5 +114,9 @@ public final class ExternalApkInstaller {
             throw new IOException("没有可处理 APK 的第三方安装器：" +
                     (intents.get(0).getPackage() == null ? "系统选择器" : intents.get(0).getPackage()));
         }
+    }
+
+    private boolean isBlank(String value) {
+        return value == null || value.trim().isEmpty();
     }
 }
